styles/css/actor/actor-v1/actor.css
/* ----------------------------------------- */
/* Forms Styles                       
/* ----------------------------------------- */
/* FIXME: FORMS */
.projectfu .sheet-body .desc {
	margin: 0.25rem;
}

.projectfu .desc {
	background: linear-gradient(to right, rgba(238, 244, 228, 0.5), rgba(226, 237, 213, 0.5));
	border-radius: 10px;
	border: 1px solid rgba(44, 74, 66, 0.3294117647);
	padding: 0.25rem;
}

.projectfu .desc .inline-desc {
	background: linear-gradient(to right, rgb(233, 243, 234), rgba(233, 243, 234, 0.5));
	border-radius: 10px;
	border: 1px solid #a2b29f;
	padding: 3px;
}

.projectfu .sheet-header {
	position: sticky;
	z-index: 1000;
	display: flex;
	flex-direction: column !important;
	flex-wrap: wrap;
	justify-content: flex-start;
	margin-bottom: 5px;
	gap: 5px;
}

.projectfu .sheet-header .combine-header {
	flex: 0;
	margin: 0;
	overflow: visible;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: flex-start;
	display: flex;
}

.projectfu .sheet-header .profile-img {
	flex: 0 0 auto;
	height: 100%;
	max-height: 220px;
	/* This makes the image fill the height of .profile */
	width: 200px;
	/* Maintains aspect ratio */
	margin-right: 0;
	align-self: stretch;
	/* Also ensures it stretches in flex container */

	background-image: linear-gradient(to right, var(--color-primary), var(--color-secondary));
	background-clip: content-box;
	border: 1px solid #aeb8a8;
	border-radius: 10px 0 0 10px;

	object-fit: cover;
	object-position: top;
	aspect-ratio: 1;
}

.projectfu .sheet-header .item-profile-img {
	flex: 0 0 auto;
	height: 100%;
	max-height: 144px;
	/* This makes the image fill the height of .profile */
	width: 144px;
	/* Maintains aspect ratio */
	margin-right: 0;
	align-self: stretch;
	/* Also ensures it stretches in flex container */

	background-image: linear-gradient(to right, var(--color-primary), var(--color-secondary));
	background-clip: content-box;
	border: 1px solid #aeb8a8;
	border-radius: 10px 0 0 10px;

	object-fit: cover;
	object-position: top;
	aspect-ratio: 1;
}

.projectfu .sheet-header .charname-container {
	background: linear-gradient(to right, #532853, #bfb8c4);
	border-color: #c1b7c7;
	border-radius: 0;
	display: flex;
	align-items: center;
	padding: 0;
	border-right: groove #ffffff 3px;
}

.projectfu .sheet-header .charname-container input {
	white-space: normal;
}

.projectfu .sheet-header .header-fields {
	flex: 1;
}

.projectfu .sheet-header .header-fields .header-start {
	border-top-right-radius: 12px;
	border: 1px solid rgba(44, 74, 66, 0.3294117647);
}

.projectfu .sheet-header .header-fields .header-center {
	border-radius: 0 0 12px 0;
	padding: 4px 0;
	grid-row-gap: 2px;
	height: 147px;
}

.projectfu .sheet-header .header-fields .header-center.item-header {
	border-radius: 0 0 12px 0;
	padding: 10px;
	height: 84px !important;
}

.projectfu .sheet-header .header-fields .header-center.item-feature-header {
	border-radius: 0 0 12px 0;
	padding: 10px;
	height: 84px !important;
}

.projectfu .sheet-header .header-fields .header-end {
	padding: 0;
	align-self: baseline;
}

.projectfu .sheet-header .header-fields #status-section,
.projectfu .sheet-header .header-fields #subtype-section {
	border-radius: 10px 0 0 10px;
	display: flex;
	align-items: center;
}

.projectfu .sheet-header .header-fields #attribute-section {
	border-radius: 0;
	display: flex;
	align-items: center;
	height: 100%;
}

.projectfu .sheet-header .header-fields #attribute-section div {
	gap: 2px;
}

.projectfu .sheet-header .header-fields #roll-section {
	border-radius: 0 10px 10px 0;
	height: 100%;
}

.projectfu .sheet-header .header-fields #item-navbar {
	border-radius: 0 10px 10px 0;
}

.projectfu .sheet-header select {
	margin: 0;
	padding: 0;
	border: none;
	/* Select Option */
}

.projectfu .sheet-header select option {
	background-color: var(--color-primary);
	color: #ebf7af;
}

.projectfu .sheet-header h2.charname {
	background-color: transparent;
	border-color: transparent;
	color: #000000;
	height: 50px;
	padding-left: 8px;
	border-bottom: 0;
	margin: 0;
}

.projectfu .sheet-header h2.charname input {
	color: #ebf7af;
	border: 0;
	background-color: transparent;
	text-shadow: 2px 2px 1px black;
	width: 100%;
	height: 100%;
}

.projectfu .sheet-header h4.pronouns {
	background-color: transparent;
	border-color: transparent;
	color: #000000;
	height: 100%;
	border-bottom: 0;
	margin: 0;
}

.projectfu .sheet-header h4.pronouns input {
	color: #ebf7af;
	text-shadow: 1px 1px 1px black;
	width: 100%;
	height: 100%;
	border: 0;
	background-color: transparent;
	text-align: center;
}

.projectfu .sheet-header h4.martials {
	border-bottom: 0;
	display: flex;
	align-items: center;
	/* height: 2em; */
	text-align: center;
	-webkit-box-flex: 1;
	-ms-flex-positive: 1;
	flex-grow: 1;
	/* Martial & Offensive Icon */
}

.projectfu .sheet-header h4.martials img#martial-header,
.projectfu .sheet-header h4.martials img#offensive-header {
	-webkit-box-flex: 0;
	-ms-flex: 0 0 48px;
	flex: 0 0 48px;
	height: 48px;
	-o-object-fit: contain;
	object-fit: contain;
	vertical-align: middle;
	background-position-x: center;
	border: none;
	background-repeat: no-repeat;
	margin: auto;
	opacity: 0.5;
	cursor: pointer;
	transition: opacity 0.7s ease;
}

.projectfu .sheet-header h4.martials img#martial-header.active,
.projectfu .sheet-header h4.martials img#offensive-header.active {
	opacity: 1;
}

.projectfu .sheet-header h4.martials img#martial-header:not(.active):hover,
.projectfu .sheet-header h4.martials img#offensive-header:not(.active):hover {
	opacity: 0.8;
}

.projectfu .fit-desc-row {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	gap: 1rem;
	height: 100%;
}

.projectfu .fit-desc {
	flex: 1;
	overflow: hidden;
}

.projectfu .token-profile-img {
	height: 100%;
	width: 5rem;
	-o-object-fit: contain;
	object-fit: contain;
	border: 1px solid #aaa;
	border-radius: 4px;
}
/* ... */

